Finished solution to problem 4. Removed some .class files.

--- a/004/todo
+++ b/004/todo
@@ -1,3 +1,1 @@
-implement method to check if argument is a parameter of two 3-digit numbers (factorise).
-ie if divisible by 999-100, etc.
-add comments explaining methods.
+most efficient algorithm?
